# continual-learning-arena

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
API-reference/: clarena.html  index.html  search.js
API-reference/clarena/: backbones.html  callbacks.html  cl_algorithms.html  cl_datasets.html  cl_heads.html  experiments.html  heads.html  metrics.html  mtl_algorithms.html  mtl_datasets.html  stl_algorithms.html  stl_datasets.html  unlearning_algorithms.html  utils.html
clarena/: __init__.py  base.py  cli.py  clrun.py  culrun.py  culrunref.py  cultest.py  jlrun.py  main.py  uleval.py
clarena/backbones/: __init__.py  amnesiac_hat_mlp.py  amnesiac_hat_resnet.py  base.py  constants.py  hat_mask_mlp.py  hat_mask_resnet.py  hatmask_mlp.py  hatmask_resnet.py  mlp.py  nispamask_mlp.py  resnet.py  wsn_mask_mlp.py  wsnmask_mlp.py
clarena/callbacks/: __init__.py  cl_metrics.py  cl_rich_progress_bar.py  cul_metrics.py  hat_image_show.py  hat_metrics.py  image_show.py  jl_metrics.py  metrics.py  pylogger.py  save_first_batch_images.py  save_models.py
clarena/cl_algorithms/: __init__.py  adahat.py  amnesiac_hat.py  base.py  cbp.py  cbphat.py  clpu_derpp.py  der.py  ewc head.py  ewc.py  fgadahat.py  finetuning.py  fix.py  hat.py  independent.py  lwf head.py  lwf.py  nispa.py  random.py  sadahat.py  subtle_adahat.py  wsn.py
clarena/cl_datasets/: __init__.py  base.py  cl_fakedata.py  combined.py  combined_torchvision.py  constants.py  permuted_SEMEION.py  permuted_ahdd.py  permuted_caltech101.py  permuted_caltech256.py  permuted_celeba.py  permuted_cifar10.py  permuted_cifar100.py  permuted_country211.py  permuted_cub2002011.py  permuted_dtd.py  permuted_emnist.py  permuted_eurosat.py  permuted_facescrub.py  permuted_fashionmnist.py  permuted_fer2013.py  permuted_fgvc_aircraft.py  permuted_flowers102.py  permuted_food101.py  permuted_gtsrb.py  permuted_imagenette.py  permuted_kannadamnist.py  permuted_kmnist.py  permuted_linnaeus5.py  permuted_mnist.py  permuted_notmnist.py  permuted_oxford_iiit_pet.py  permuted_pcam.py  permuted_renderedsst2.py  permuted_sign_language_mnist.py  permuted_stanfordcars.py  permuted_sun397.py  permuted_svhn.py  permuted_tinyimagenet.py  permuted_usps.py  (+6 more)
clarena/cl_heads/: __init__.py  heads_cil.py  heads_til.py
clarena/cul_algorithms/: __init__.py  amnesiac_hat_unlearn.py  base.py  clpu_derpp_unlearn.py  der_unlearn.py  ewc_unlearn head.py  ewc_unlearn.py  finetuning_unlearn.py  independent_unlearn.py  lwf_unlearn.py
clarena/experiments/: __init__.py  cl_full_metrics_calculation.py  clmain_eval.py  clmain_train.py  cul_full_eval.py  culmain_train.py  mtl_eval.py  mtl_train.py  stl_eval.py  stl_train.py
clarena/heads/: __init__.py  head_dil.py  head_stl.py  heads_cil.py  heads_mtl.py  heads_til.py
clarena/metrics/: __init__.py  base.py  cl_acc.py  cl_loss.py  cul_ad.py  cul_ag.py  cul_dd.py  hat_adjustment_rate.py  hat_masks.py  hat_network_capacity.py  mtl_acc.py  mtl_loss.py  stl_acc.py  stl_loss.py
clarena/mtl_algorithms/: __init__.py  base.py  joint_learning.py
clarena/mtl_datasets/: __init__.py  base.py  combined.py  multi_domain_sentiment.py
clarena/optimizers/: __init__.py
clarena/pipelines/: __init__.py  cl_full_eval.py  cl_main_eval.py  cl_main_expr.py  cul_full_eval.py  cul_main_expr.py  mtl_eval.py  mtl_expr.py  stl_eval.py  stl_expr.py
clarena/stl_algorithms/: __init__.py  base.py  single_learning.py
tests/: test_experiments.py
(+186 files in other folders)
